# PythonBasicTools

./: .gitignore  .report.json  README.md  __main__.py  pyproject.toml  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: build_dist.yml  bump_version.yml  coverage_badge.yml  docs.yml  publish.yml  tests.yml
docs/: .buildinfo  genindex.html  html_files_list.txt  index.html  modules.html  objects.inv  py-modindex.html  pythonbasictools.experiment_utils.html  pythonbasictools.html  readme.html  search.html  searchindex.js
docs/sources/: index.rst.txt  modules.rst.txt  pythonbasictools.experiment_utils.rst.txt  pythonbasictools.rst.txt  readme.rst.txt
exemples/: slurm.py
loggingtoolspy/: __init__.py  decorators.py  device.py  multiprocessing.py
sphinx/: generate_doc.py
sphinx/source/: conf.py  index.rst  pythonbasictools.rst
src/loggingtoolspy/: discord.py  file.py
src/pythonbasictools/: __init__.py  cmds.py  collections_tools.py  decorators.py  device.py  discord.py  docstring.py  file.py  google_drive.py  hash_tools.py  lock.py  logging.py  logging_tools.py  multiprocessing.py  multiprocessing_tools.py  packaging_tools.py  progress_bar.py  run_output_file.py  simple_tts.py  slurm.py
src/pythonbasictools/experiment_utils/: __init__.py  metadata_file.py  output_folder.py  run_output_file.py
tests/: configs.py  test_hash_tools.py
tests/docstring/: test_docstring.py
tests/packaging_tools/: test_versioning.py
tests/packaging_tools/version_mock_files/: _init.py
tests/test_collections_tools/: test_dict_of_lists_to_list_of_dicts.py  test_dict_of_lists_to_product_list_of_dicts.py
tests/test_experiment_utils/: test_metadata_file.py  test_output_folder.py  test_run_output_file.py
user/: credential.json
