[project]
name = "PythonBasicTools"
version = "0.0.3"
description = "Python Basic Tools"
authors = [{ name = "Jérémie Gince", email = "gincejeremie@gmail.com" }]
requires-python = ">=3.9,<3.15"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy (>=1.23,<3.0.0)",
    "setuptools>=65.5.1",
    "psutil>=5.9.6",
    "importlib-metadata (>=8.7.0,<9.0.0)",
    "tqdm>=4.62.3",
    "pandas>=1.3.3",
    "pandas-stubs>=2.2.2.240807",
    "pre-commit>=4.3.0",
]
dynamic = ["readme"]

[project.urls]
homepage = "https://jeremiegince.github.io/PythonBasicTools/"
Documentation = "https://jeremiegince.github.io/PythonBasicTools/"
Source = "https://github.com/JeremieGince/PythonBasicTools"

[dependency-groups]
dev = [
    "pytest-cov>=6.1.1,<7",
    "pytest-json-report>=1.5.0,<2",
    "pytest>=8.3.5,<9",
    "docutils>=0.18.1,<0.20",
    "mypy>=1.15.0,<2",
    "black>=25.1.0,<26",
    "nbmake>=1.5.5,<2",
    "wheel>=0.45.1,<0.46",
    "build>=1.2.2.post1,<2",
    "twine>=6.1.0,<7",
    "pytest-xdist>=3.7.0,<4",
    "isort>=6.0.1,<7",
]
docs = [
    "sphinx>=6.2.1,<6.3.0",
    "docutils>=0.18.1,<0.20",
    "sphinx-rtd-theme>=3.0.2,<4",
    "sphinxcontrib-bibtex>=2.5.0,<2.6.0",
    "sphinx-theme>=1.0,<2",
    "groundwork-sphinx-theme>=1.1.1,<2",
    "karma-sphinx-theme>=0.0.8,<0.0.9",
    "sphinx-mdinclude>=0.6.2,<0.7",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
testpaths = ["tests"]
addopts = [
    "-n=auto",
    "--cov-branch",
    "--cov=src",
    '--cov-report=xml:tests/.tmp/coverage.xml',
    "--cov-report=term-missing",
    "--durations=10",
]

[tool.uv]
package = true
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = ["src/pythonbasictools"]

[tool.hatch.build.targets.wheel]
include = ["src/pythonbasictools"]

[tool.hatch.build.targets.wheel.sources]
"src/pythonbasictools" = "pythonbasictools"


[build-system]
requires = [
  "psutil",
  "setuptools",
  "tqdm",
  "docutils",
  "pytest",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    '@(abc\.)?abstractmethod',
]

[[tool.mypy.overrides]]
module = [
    "tqdm",
    "requests",
    "pandas",
    "tensorflow",
    "psutil",
    "docutils",
    "docutils.nodes",
    "paramiko",
    "docutils.core",
    "torch",
    "sklearn",
]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
